--- a/spark_streaming/src/main/resources/config_dev.conf
+++ b/spark_streaming/src/main/resources/config_dev.conf
@@ -16,9 +16,10 @@ consumer {
 spark_streaming {
   spark_master = "local[4]"
   spark_checkpoint = "checkpoint"
+  save_hdfs = false
 }
 
 hadoop {
-  hdfs = ""
+  hdfs = "hdfs://localhost:9000/kafka"
 }
 
