--- a/spark_streaming/src/main/resources/config_pro.conf
+++ b/spark_streaming/src/main/resources/config_pro.conf
@@ -16,6 +16,7 @@ consumer {
 spark_streaming {
   spark_master = "local[4]"
   spark_checkpoint = "hdfs://hadoop-cluster/spark-streaming/checkpoint"
+  save_hdfs = true
 }
 
 hadoop {
