--- a/spark_streaming/src/main/resources/config_pro.conf
+++ b/spark_streaming/src/main/resources/config_pro.conf
@@ -14,6 +14,7 @@ consumer {
 }
 
 spark_streaming {
+  batch_duration = 600 # 10min
   spark_master = "local[4]"
   spark_checkpoint = "hdfs://hadoop-cluster/spark-streaming/checkpoint"
   save_hdfs = true
