--- a/spark_streaming/src/main/resources/config_dev.conf
+++ b/spark_streaming/src/main/resources/config_dev.conf
@@ -14,6 +14,7 @@ consumer {
 }
 
 spark_streaming {
+  batch_duration = 10 # 10s
   spark_master = "local[4]"
   spark_checkpoint = "checkpoint"
   save_hdfs = false
