--- a/spark_streaming/src/main/resources/config_pro.conf
+++ b/spark_streaming/src/main/resources/config_pro.conf
@@ -9,7 +9,7 @@ consumer {
   zookeeper = "kafka125.yn.com:2181,kafka126.yn.com:2181,kafka127.yn.com:2181"
   bootstrap_servers = "kafka125.yn.com:9092,kafka126.yn.com:9092,kafka127.yn.com:9092"
   group_id = "consumer-binlog_beeper_tf_trans_event-test"
-  offset_store = true
+  offset_store = false
   offset_reset = "earliest"
 }
 
