--- a/spark_streaming/src/main/resources/config_store.conf
+++ b/spark_streaming/src/main/resources/config_store.conf
@@ -8,7 +8,7 @@ consumer {
   topic = "binlog_beeper_tf_trans_event"
   zookeeper = "kafka125.yn.com:2181,kafka126.yn.com:2181,kafka127.yn.com:2181"
   bootstrap_servers = "kafka125.yn.com:9092,kafka126.yn.com:9092,kafka127.yn.com:9092"
-  group_id = "consumer-binlog_beeper_tf_trans_event-test"
+  group_id = "consumer-binlog_beeper_tf_trans_event-store"
   offset_store = false
   offset_reset = "earliest"
 }
@@ -17,7 +17,7 @@ spark_streaming {
   batch_duration = 600 # 10min
   spark_master = "local[4]"
   spark_checkpoint = "hdfs://hadoop-cluster/spark-streaming/checkpoint"
-  save_hdfs = false
+  save_hdfs = true
 }
 
 hadoop {
