--- a/spark_streaming/src/main/resources/config_dev.conf
+++ b/spark_streaming/src/main/resources/config_dev.conf
@@ -5,18 +5,19 @@ mysql_offset {
 }
 
 consumer {
-  topic = "state-direct-kafka"
+  topic = "binlog_beeper_tf_trans_event-1"
   zookeeper = "localhost:2181"
   bootstrap_servers = "localhost:9092"
-  group_id = "consumer-StateDirectKafkaWordCount"
-  offset_store = false
+  group_id = "consumer-binlog_beeper_tf_trans_event-1"
+  offset_store = true
   offset_reset = "latest"
 }
 
 spark_streaming {
   batch_duration = 10 # 10s
-  spark_master = "local[4]"
+  spark_master = "local[3]"
   spark_checkpoint = "checkpoint"
+  checkpoint_dir = "BeepertfTransEvent"
   save_hdfs = false
 }
 
@@ -25,6 +26,12 @@ hadoop {
 }
 
 redis {
-  host = "localhost"
-  port = 6379
+  pool {
+    maxTotal=105
+    maxIdle=10
+    maxWaitMillis=60000
+    testOnBorrow=true
+  }
+  sentinel_master = mymaster
+  sentinel_host = "127.0.0.1:63791,127.0.0.1:63792"
 }
