--- a/spark_streaming/src/main/resources/config_pro.conf
+++ b/spark_streaming/src/main/resources/config_pro.conf
@@ -9,13 +9,14 @@ consumer {
   zookeeper = "kafka125.yn.com:2181,kafka126.yn.com:2181,kafka127.yn.com:2181"
   bootstrap_servers = "kafka125.yn.com:9092,kafka126.yn.com:9092,kafka127.yn.com:9092"
   group_id = "consumer-binlog_beeper_tf_trans_event-test"
-  offset_store = false
+  offset_store = true
   offset_reset = "earliest"
 }
 
 spark_streaming {
   batch_duration = 600 # 10min
   spark_checkpoint = "hdfs://hadoop-cluster/spark-streaming/checkpoint"
+  checkpoint_dir = "BeepertfTransEvent"
   save_hdfs = false
 }
 
@@ -24,6 +25,12 @@ hadoop {
 }
 
 redis {
-  host = "localhost"
-  port = 6379
+  pool {
+    maxTotal=105
+    maxIdle=10
+    maxWaitMillis=60000
+    testOnBorrow=true
+  }
+  sentinel_master = mymaster
+  sentinel_host = "192.168.0.30:26379,192.168.0.31:26379"
 }
